--- a/resume.css
+++ b/resume.css
@@ -30,8 +30,8 @@ body {
 #bd, #ft { margin-bottom: 2em; }
 
 /* //-- footer -- */
-#ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid #ccc; text-align: center; }
-#ft p { margin-bottom: 0; text-align: center;   }
+#ft { padding: 1em 0 0.01em 0; font-size: 90%; border-top: 3px solid #ccc; text-align: center; }
+#ft p { margin-bottom: 0.2em; text-align: center;   }
 
 /* //-- core typography and style -- */
 #hd h1 { font-size: 58px; text-transform: uppercase; letter-spacing: 3px; color: #003366}
